--- a/app/src/main/res/layout/fragment_empty_view.xml
+++ b/app/src/main/res/layout/fragment_empty_view.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:src="@drawable/logo_splash"
-           android:layout_gravity="center"
-            android:layout_centerInParent="true">
+<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ImageView android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:src="@drawable/logo_splash"
+                   android:layout_gravity="center"
+                    android:layout_centerInParent="true">
 
-</ImageView>
+        </ImageView>
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab_brain_payment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_margin="10dp"/>
+</RelativeLayout>
